force-app/zurich-base/main/default/objects/PolicyVersion__c/PolicyVersion__c.object-meta.xml
<CustomObject>
    <description>This entity represents all the changes that a policy can suffer such as activation and deactivation of a On Demand non-life policy, change of a product, policy activation and so on.</description>
    <label>Versión de póliza</label>
    <nameField>
        <label>Versión de póliza</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Versiones de póliza</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>