force-app/zurich-base/main/default/objects/PolicyVersion__c/fields/adjustmentReason__c.field-meta.xml
<CustomField>
    <fullName>adjustmentReason__c</fullName>
    <label>Motivo de ajuste</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>