force-app/zurich-base/main/default/objects/PolicyVersion__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Indicates when finishes that version of policy</description>
    <label>Fecha fin</label>
    <type>Date</type>
</CustomField>