force-app/zurich-base/main/default/objects/PolicyVersion__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <description>Order to which is related to</description>
    <label>Póliza</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Versiones de póliza</relationshipLabel>
    <relationshipName>PolicyVersions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>