force-app/zurich-base/main/default/objects/PolicyVersion__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <label>Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>