force-app/zurich-base/main/default/objects/PolicyVersion__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Indicates when starts that version of policy</description>
    <label>Fecha inicio</label>
    <required>true</required>
    <type>Date</type>
</CustomField>